@@ -1,3 +1,3 @@
-# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:26', checksum=372210909
-rlzi,loss_type,unit,mean,stddev
+# generated_by='OpenQuake engine 3.6.0-gite56a4a24b3', start_date='2019-06-17T10:08:24', checksum=372210909
+rlz_id,loss_type,unit,mean,stddev
 0,structural,USD,5.960427E+02,3.678971E+02
